// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SceneRuleTargetEditor should render a drop down with appropriate resource type: Color 1`] = `
<div>
  <div
    data-mocked="Grid"
    griddefinition="[{\\"colspan\\":4},{\\"colspan\\":8}]"
  >
    <div
      data-mocked="Select"
      options="[{\\"label\\":\\"test message\\",\\"value\\":\\"Icon\\"},{\\"label\\":\\"test message\\",\\"value\\":\\"Color\\"},{\\"label\\":\\"test message\\",\\"value\\":\\"Number\\"},{\\"label\\":\\"test message\\",\\"value\\":\\"Opacity\\"}]"
      selectedarialabel="test message"
      selectedoption="{\\"label\\":\\"test message\\",\\"value\\":\\"Color\\"}"
    />
    SceneRuleTargetColorEditor
  </div>
</div>
`;

exports[`SceneRuleTargetEditor should render a drop down with appropriate resource type: Icon 1`] = `
<div>
  <div
    data-mocked="Grid"
    griddefinition="[{\\"colspan\\":4},{\\"colspan\\":8}]"
  >
    <div
      data-mocked="Select"
      options="[{\\"label\\":\\"test message\\",\\"value\\":\\"Icon\\"},{\\"label\\":\\"test message\\",\\"value\\":\\"Color\\"},{\\"label\\":\\"test message\\",\\"value\\":\\"Number\\"},{\\"label\\":\\"test message\\",\\"value\\":\\"Opacity\\"}]"
      selectedarialabel="test message"
      selectedoption="{\\"label\\":\\"test message\\",\\"value\\":\\"Icon\\"}"
    />
    SceneRuleTargetIconEditor
  </div>
</div>
`;

exports[`SceneRuleTargetEditor should render a drop down with appropriate resource type: Opacity 1`] = `
<div>
  <div
    data-mocked="Grid"
    griddefinition="[{\\"colspan\\":4},{\\"colspan\\":8}]"
  >
    <div
      data-mocked="Select"
      options="[{\\"label\\":\\"test message\\",\\"value\\":\\"Icon\\"},{\\"label\\":\\"test message\\",\\"value\\":\\"Color\\"},{\\"label\\":\\"test message\\",\\"value\\":\\"Number\\"},{\\"label\\":\\"test message\\",\\"value\\":\\"Opacity\\"}]"
      selectedarialabel="test message"
      selectedoption="{\\"label\\":\\"test message\\",\\"value\\":\\"Opacity\\"}"
    />
    SceneRuleTargetOpacityEditor
  </div>
</div>
`;
